--- a/books_web/html/index.html
+++ b/books_web/html/index.html
@@ -1,10 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>books</title>
+    <!-- 引入Vue -->
+    <script type="text/javascript" src="../js/vue.js"></script>
+    <!-- 引入axios -->
+    <script type="text/javascript" src="../js/axios.js"></script>
+    <!-- 引入样式 -->
+    <link rel="stylesheet" href="../css/element-ui.css">
+    <!-- 引入组件库 -->
+    <script src="../js/element-ui.js"></script>
 </head>
 <body>
-$END$
+
+<div id="demo">
+    <template>
+        <el-table
+                ref="multipleTable"
+                :data="tableData"
+                tooltip-effect="dark"
+                style="width: 100%"
+                @selection-change="handleSelectionChange">
+            <el-table-column
+                    type="selection"
+                    width="55">
+            </el-table-column>
+<!--            <el-table-column-->
+<!--                    label="日期"-->
+<!--                    width="120">-->
+<!--                <template slot-scope="scope">{{ scope.row.date }}</template>-->
+            </el-table-column>
+            <el-table-column
+                    prop="name"
+                    label="姓名"
+                    width="120">
+            </el-table-column>
+            <el-table-column
+                    prop="downSum"
+                    label="总下载量"
+                    show-overflow-tooltip>
+            </el-table-column>
+        </el-table>
+        <div style="margin-top: 20px">
+            <el-button @click="toggleSelection([tableData[1], tableData[2]])">切换第二、第三行的选中状态</el-button>
+            <el-button @click="toggleSelection()">取消选择</el-button>
+        </div>
+    </template>
+</div>
+
+<script type="text/javascript">
+    Vue.config.productionTip = false //阻止 vue 在启动时生成生产提示。
+
+    //创建Vue实例
+    new Vue({
+        el: '#demo', //el用于指定当前Vue实例为哪个容器服务，值通常为css选择器字符串。
+        data: { //data中用于存储数据，数据供el所指定的容器去使用，值我们暂时先写成一个对象。
+            tableData: [],
+        },
+        methods: {
+            // 展示列表数据
+            selectAll() {
+                let _this = this;
+                axios({
+                    headers: {
+                        'Content-Type': 'application/json;charset=UTF-8'
+                    },
+                    method: "get",
+                    url: "http://localhost:8080/books/getAll"
+                }).then(function (resp) {
+                    console.log(resp.data)
+                    _this.tableData = resp.data.obj;
+                })
+            },
+            toggleSelection(rows) {
+                if (rows) {
+                    rows.forEach(row => {
+                        this.$refs.multipleTable.toggleRowSelection(row);
+                    });
+                } else {
+                    this.$refs.multipleTable.clearSelection();
+                }
+            },
+            handleSelectionChange(val) {
+                this.multipleSelection = val;
+            }
+        },
+        mounted() {
+            this.selectAll()
+        }
+    })
+
+</script>
 </body>
 </html>
