--- a/books_web/html/index.html
+++ b/books_web/html/index.html
@@ -56,6 +56,20 @@
             </div>
         </el-dialog>
 
+        <!--修改表格-->
+        <el-dialog title="修改" :visible.sync="updateFormVisible">
+            <el-form :model="updateForm">
+                <el-form-item>
+                    <el-input v-model="updateForm.name" autocomplete="off"></el-input>
+                </el-form-item>
+
+            </el-form>
+            <div slot="footer" class="dialog-footer">
+                <el-button @click="addFormVisible  = false">取 消</el-button>
+                <el-button type="primary" @click="updateExecute()">确 定</el-button>
+            </div>
+        </el-dialog>
+
 
         <el-table
                 ref="multipleTable"
@@ -67,10 +81,7 @@
                     type="selection"
                     width="55">
             </el-table-column>
-            <!--            <el-table-column-->
-            <!--                    label="日期"-->
-            <!--                    width="120">-->
-            <!--                <template slot-scope="scope">{{ scope.row.date }}</template>-->
+
             </el-table-column>
             <el-table-column
                     prop="name"
@@ -94,7 +105,22 @@
             </el-table-column>
         </el-table>
 
+
+        <div class="block">
+            <span class="demonstration">显示总数</span>
+            <el-pagination
+                    @size-change="handleSizeChange"
+                    @current-change="handleCurrentChange"
+                    :current-page.sync="currentPage"
+                    :page-size=pageSize
+                    layout="total, prev, pager, next"
+                    :total=total>
+            </el-pagination>
+        </div>
+
     </template>
+
+
 </div>
 
 <script type="text/javascript">
@@ -110,10 +136,17 @@
                 name: "",
             },
             addFormVisible: false,
+            updateFormVisible: false,
+            pageSize: 2,
+            total: 10,
+            currentPage: 1,
             addForm: {
                 name: "",
                 url: "",
             },
+            updateForm: {
+                name: ""
+            }
         },
         methods: {
             // 展示列表数据
@@ -139,10 +172,10 @@
                     method: "get",
                     url: "http://localhost:8080/books/likeAndPage/" + _this.formInline.name
                 }).then(function (resp) {
-                    console.log(resp.data)
                     _this.tableData = resp.data.obj;
                 })
             },
+
             deleteBook(id) {
                 let _this = this;
                 axios({
@@ -166,7 +199,26 @@
                     data: this.addForm
                 }).then(() => {
                     this.addFormVisible = false
-                    this.selectAll();
+                    this.selectQuery()
+                })
+            },
+
+            updateBook(row) {
+                this.updateForm.name = row.name;
+                this.updateForm.id = row.id;
+                this.updateFormVisible = true;
+            },
+            updateExecute() {
+                axios({
+                    method: "post",
+                    url: "http://localhost:8080/books/update",
+                    headers: {
+                        'Content-Type': 'application/json;charset=UTF-8'
+                    },
+                    data: this.updateForm
+                }).then(() => {
+                    this.updateFormVisible = false
+                    this.selectQuery()
                 })
             },
             beforeAvatarUpload(file) {
@@ -180,6 +232,37 @@
                 } else {
                     this.$message.error(res.messges);
                 }
+            },
+            //分页
+            handleSizeChange(val) {
+                this.pageSize = val
+                axios.get(`http://localhost:8080/books/likeAndPage/${this.currentPage}/${val}`).then((res) => {
+                    console.log(res)
+                    var data = res.data;
+                    if (data.code == 200) {
+                        this.tableData = data.obj.records
+                        this.total = data.obj.total
+                    } else {
+                        this.$message.error(data.messges)
+                    }
+                });
+                this.pageSize = val
+                console.log(`每页 ${val} 条`)
+            },
+            handleCurrentChange(val) {
+                this.currentPage = val
+                axios.get(`http://localhost:8080/books/likeAndPage/${val}/${this.pageSize}`).then((res) => {
+                    console.log(res)
+                    var data = res.data;
+                    if (data.code == 200) {
+                        this.tableData = data.obj.records
+                        this.total = data.obj.total
+                    } else {
+                        this.$message.error(data.messges)
+                    }
+                });
+                console.log(`当前页: ${val}`)
+                this.$data.currentPage = val
             },
             toggleSelection(rows) {
                 if (rows) {
